--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
-
+    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе </p><a href="https://htmlacademy.ru/intensive/htmlcss">«HTML и CSS, уровень 1».</a>
   </body>
 </html>
