--- a/index.html
+++ b/index.html
@@ -5,6 +5,71 @@
     <title>HTML Academy: Техномарт</title>
   </head>
   <body>
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе </p><a href="https://htmlacademy.ru/intensive/htmlcss">«HTML и CSS, уровень 1».</a>
+    <header>
+      <h1>техномарт</h1>
+      <ul>
+        <li>Поиск:</li>
+        <li>Закладки: 0</li>
+        <li>Корзина: 0</li>
+        <li>Оформить заказ</li>
+      </ul>
+      <section>
+        <h2>главные данные</h2>
+        <p>Интернет-магазин </p><br/>строительных материалов <br/>и инструментов для ремонта
+        <p>+7 (812) 555-05-55</p><br/>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+        <button type="submit">Войти</button>
+        <button type="submit">Регистриция</button>
+        <nav>
+          <ul>
+            <li><a href="">Главная</a></li>
+            <li><a href="">Компания</a></li>
+            <li><a href="">Каталог</a></li>
+            <li><a href="">Новости</a></li>
+            <li><a href="">Спецпредложения</a></li>
+            <li><a href="">Доставка</a></li>
+            <li><a href="">Контакты</a></li>
+          </ul>
+        </nav>
+      </section>
+    </header>
+    <main>
+      <section>
+        <h2>Компания "Техномарт"</h2>
+        <p>Настоящий мужской шопинг начинается здесь! огромный выбор товаров для ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах</p><br/>Мы можемдоставить ваш товар в самые отдельные точки России!<br/>Техномарт работает со многими ранспортными компаниями:
+        <ul>
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul><a href="about">Подробнее о компании </a>
+      </section>
+      <section>
+        <h2>Контакты</h2>
+        <p>можете выбрать товар сами,</p><br/>заехав в наш офис:
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158" frameborder="0"></iframe>
+        <button type="submit">Заблудились? Напишите нам!</button>
+      </section>
+    </main>
+    <footer>
+      <section>
+        <h2>Техномарт</h2>
+        <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><br/>+7 (812) 555-05-55
+        <ul>
+          <li><a href="">Компания</a></li>
+          <li><a href="">Новости</a></li>
+          <li><a href="">Каталог</a></li>
+          <li><a href="">Доставка</a></li>
+          <li><a href="">Контакты</a></li>
+          <li><a href="">Материалы</a></li>
+          <li><a href="">Техника</a></li>
+          <li><a href="">Инструмент</a></li>
+          <li><a href="">Спецпредложения</a></li>
+        </ul>
+      </section>
+      <section>
+        <p>© 2010-2017 Компания "Техномарт"</p><br/>Все права защищены<img src="" alt="alt"><img src="" alt="alt"><img src="" alt="alt">
+        <p>Обратная связь</p><br/>mail@htmlacademy.ru
+        <p>Разработано</p><br/>htmlacademy.ru
+      </section>
+    </footer>
   </body>
 </html>
