--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <button type="submit">Регистриция</button>
         <nav>
           <ul>
-            <li><a href="">Главная</a></li>
+            <li><a href="#">Главная</a></li>
             <li><a href="">Компания</a></li>
-            <li><a href="">Каталог</a></li>
+            <li><a href="pages/catalog.html">Каталог</a></li>
             <li><a href="">Новости</a></li>
             <li><a href="">Спецпредложения</a></li>
             <li><a href="">Доставка</a></li>
@@ -56,7 +56,7 @@
         <ul>
           <li><a href="">Компания</a></li>
           <li><a href="">Новости</a></li>
-          <li><a href="">Каталог</a></li>
+          <li><a href="pages/catalog.html">Каталог</a></li>
           <li><a href="">Доставка</a></li>
           <li><a href="">Контакты</a></li>
           <li><a href="">Материалы</a></li>
