--- a/catalog.html
+++ b/catalog.html
@@ -6,17 +6,17 @@
   </head>
   <body>
     <header>
-      <h1>техномарт</h1>
-      <ul>
-        <li>Поиск:</li>
-        <li>Закладки: 0</li>
-        <li>Корзина: 10</li>
-        <li>Оформить заказ</li>
-      </ul>
+      <div class="logo">техномарт
+        <div class="search">Поиск:</div>
+        <div class="bookmarks">Закладки: 0</div>
+        <div class="mart">Корзина: 0</div>
+        <div class="order">Оформить заказ</div>
+      </div>
       <section>
         <h2>главные данные</h2>
-        <p>Интернет-магазин </p><br/>строительных материалов <br/>и инструментов для ремонта
-        <p>+7 (812) 555-05-55</p><br/>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+        <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
+        <p><a href="tel:">+7 (812) 555-05-55</a></p>
+        <p>. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p>
         <button type="submit">Равшан Джамшутович</button>
         <ul>
           <li><a href="">Мои Заказы</a></li>
@@ -24,9 +24,9 @@
         </ul>
         <nav>
           <ul>
-            <li><a href="../index.html">Главная</a></li>
+            <li><a href="index.html">Главная</a></li>
             <li><a href="">Компания</a></li>
-            <li><a href="#">Каталог</a></li>
+            <li><a class="current">Каталог</a></li>
             <li><a href="">Новости</a></li>
             <li><a href="">Спецпредложения</a></li>
             <li><a href="">Доставка</a></li>
@@ -40,24 +40,29 @@
         <li><img src="" alt="home"></li>
         <li><a href="#">Каталог </a></li>
         <li><a href="">Инструмент</a></li>
-        <li><a href="">Перфораторы</a></li>
+        <li><a>Перфораторы</a></li>
       </ul>
       <h2>Перфораторы</h2>
       <section>
-        <p>Производители:</p>
-        <ul>
-          <li>bosch</li>
-          <li>интерскол</li>
-          <li>makita</li>
-          <li>dewalt</li>
-          <li>hitachi</li>
-        </ul>
-        <p>питание:</p>
-        <ul>
-          <li>аккумуляторные</li>
-          <li>сетевые</li>
-        </ul>
-        <button type="submit">Показать</button>
+        <form action="" method="method">
+          <fieldset>
+            <legend></legend>
+          </fieldset>
+          <p>Производители:</p>
+          <ul>
+            <li>bosch</li>
+            <li>интерскол</li>
+            <li>makita</li>
+            <li>dewalt</li>
+            <li>hitachi</li>
+          </ul>
+          <p>питание:</p>
+          <ul>
+            <li>аккумуляторные</li>
+            <li>сетевые</li>
+          </ul>
+          <button type="submit">Показать</button>
+        </form>
         <ul>
           <li><img src="" alt="">
             <h3>Перфоратор BOSCH BFG 3000</h3>
@@ -97,26 +102,30 @@
       <section></section>
     </main>
     <footer>
-      <section>
-        <h2>Техномарт</h2>
-        <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><br/>+7 (812) 555-05-55
+      <div class="footer_top">
+        <div class="footer_logo">Техномарт</div>
         <ul>
           <li><a href="">Компания</a></li>
           <li><a href="">Новости</a></li>
-          <li><a href="#">Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="">Доставка</a></li>
           <li><a href="">Контакты</a></li>
+        </ul>
+      </div>
+      <div class="footer_middle">
+        <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><a href="tel:">+7 (812) 555-05-55 </a>
+        <ul> 
           <li><a href="">Материалы</a></li>
           <li><a href="">Техника</a></li>
           <li><a href="">Инструмент</a></li>
           <li><a href="">Спецпредложения</a></li>
         </ul>
-      </section>
-      <section>
-        <p>© 2010-2017 Компания "Техномарт"</p><br/>Все права защищены<img src="" alt="alt"><img src="" alt="alt"><img src="" alt="alt">
-        <p>Обратная связь</p><br/>mail@htmlacademy.ru
-        <p>Разработано</p><br/>htmlacademy.ru
-      </section>
+      </div>
+      <div class="footer_bottom">
+        <p>© 2010-2017 Компания "Техномарт" Все права защищены</p><img src="" alt="alt">
+        <p>Обратная связь</p><a href="mailto:">mail@htmlacademy.ru</a>
+        <p>Разработано htmlacademy.ru</p>
+      </div>
     </footer>
   </body>
 </html>
