--- a/index.html
+++ b/index.html
@@ -6,24 +6,24 @@
   </head>
   <body>
     <header>
-      <h1>техномарт</h1>
-      <ul>
-        <li>Поиск:</li>
-        <li>Закладки: 0</li>
-        <li>Корзина: 0</li>
-        <li>Оформить заказ</li>
-      </ul>
+      <div class="logo">техномарт
+        <div class="search">Поиск:</div>
+        <div class="bookmarks">Закладки: 0</div>
+        <div class="mart">Корзина: 0</div>
+        <div class="order">Оформить заказ</div>
+      </div>
       <section>
         <h2>главные данные</h2>
-        <p>Интернет-магазин </p><br/>строительных материалов <br/>и инструментов для ремонта
-        <p>+7 (812) 555-05-55</p><br/>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+        <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
+        <p><a href="tel:">+7 (812) 555-05-55</a></p>
+        <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p>
         <button type="submit">Войти</button>
         <button type="submit">Регистриция</button>
         <nav>
           <ul>
-            <li><a href="#">Главная</a></li>
+            <li><a class="current">Главная</a></li>
             <li><a href="">Компания</a></li>
-            <li><a href="pages/catalog.html">Каталог</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
             <li><a href="">Новости</a></li>
             <li><a href="">Спецпредложения</a></li>
             <li><a href="">Доставка</a></li>
@@ -40,36 +40,40 @@
           <li>Деловые линии</li>
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
-        </ul><a href="about">Подробнее о компании </a>
+        </ul><a href="about.html">Подробнее о компании </a>
       </section>
       <section>
         <h2>Контакты</h2>
-        <p>можете выбрать товар сами,</p><br/>заехав в наш офис:
+        <p>можете выбрать товар сами, заехав в наш офис:</p>
         <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158" frameborder="0"></iframe>
         <button type="submit">Заблудились? Напишите нам!</button>
       </section>
     </main>
     <footer>
-      <section>
-        <h2>Техномарт</h2>
-        <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><br/>+7 (812) 555-05-55
+      <div class="footer_top">
+        <div class="footer_logo">Техномарт</div>
         <ul>
           <li><a href="">Компания</a></li>
           <li><a href="">Новости</a></li>
-          <li><a href="pages/catalog.html">Каталог</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
           <li><a href="">Доставка</a></li>
           <li><a href="">Контакты</a></li>
+        </ul>
+      </div>
+      <div class="footer_middle">
+        <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><a href="tel:">+7 (812) 555-05-55 </a>
+        <ul> 
           <li><a href="">Материалы</a></li>
           <li><a href="">Техника</a></li>
           <li><a href="">Инструмент</a></li>
           <li><a href="">Спецпредложения</a></li>
         </ul>
-      </section>
-      <section>
-        <p>© 2010-2017 Компания "Техномарт"</p><br/>Все права защищены<img src="" alt="alt"><img src="" alt="alt"><img src="" alt="alt">
-        <p>Обратная связь</p><br/>mail@htmlacademy.ru
-        <p>Разработано</p><br/>htmlacademy.ru
-      </section>
+      </div>
+      <div class="footer_bottom">
+        <p>© 2010-2017 Компания "Техномарт" Все права защищены</p><img src="" alt="alt">
+        <p>Обратная связь</p><a href="mailto:">mail@htmlacademy.ru</a>
+        <p>Разработано htmlacademy.ru</p>
+      </div>
     </footer>
   </body>
 </html>
