--- a/catalog.html
+++ b/catalog.html
@@ -2,130 +2,146 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>HTML Academy: Техномарт Каталог</title>
   </head>
   <body>
-    <header>
-      <div class="logo">техномарт
+    <div class="wrapper">
+      <header class="header">
+        <div class="logo">техномарт</div>
         <div class="search">Поиск:</div>
         <div class="bookmarks">Закладки: 0</div>
-        <div class="mart">Корзина: 0</div>
+        <div class="mart">Корзина: 10</div>
         <div class="order">Оформить заказ</div>
-      </div>
-      <section>
-        <h2>главные данные</h2>
-        <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
-        <p><a href="tel:">+7 (812) 555-05-55</a></p>
-        <p>. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <button type="submit">Равшан Джамшутович</button>
-        <ul>
-          <li><a href="">Мои Заказы</a></li>
-          <li><a href="">Личный кабинет</a></li>
-        </ul>
-        <nav>
+        <section>
+          <h2>главные данные</h2>
+          <p>Интернет-магазин</p>
+          <p>строительных материалов</p>
+          <p>и инструментов для ремонта</p><a href="tel:">+7 (812) 555-05-55</a>
+          <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><a href="customer.html">Равшан Джамшутович</a>
           <ul>
-            <li><a href="index.html">Главная</a></li>
+            <li><a href="">Мои Заказы</a></li>
+            <li><a href="">Личный кабинет</a></li>
+          </ul>
+          <nav>
+            <ul>
+              <li><a href="index.html">Главная</a></li>
+              <li><a href="">Компания</a></li>
+              <li><a class="current">Каталог</a></li>
+              <li><a href="">Новости</a></li>
+              <li><a href="">Спецпредложения</a></li>
+              <li><a href="">Доставка</a></li>
+              <li><a href="">Контакты</a></li>
+            </ul>
+          </nav>
+        </section>
+      </header>
+      <main class="main">
+        <ul>
+          <li><img src="" alt="home"></li>
+          <li><a href="#">Каталог </a></li>
+          <li><a href="">Инструмент</a></li>
+          <li><a class="current">Перфораторы</a></li>
+        </ul>
+        <h2>Перфораторы</h2>
+        <section>
+          <form action="" method="post">
+            <fieldset>
+              <legend>
+                <div class="choose_filter">
+                  <label for="">Производители:
+                    <input type="checkbox" name="manufacturer">
+                    <label>bosch</label>
+                    <input type="checkbox" name="manufacturer">
+                    <label>интерскол</label>
+                    <input type="checkbox" name="manufacturer">
+                    <label>makita</label>
+                    <input type="checkbox" name="manufacturer">
+                    <label>dewalt</label>
+                    <input type="checkbox" name="manufacturer">
+                    <label>hitachi</label>
+                  </label>
+                </div>
+              </legend>
+            </fieldset>
+            <fieldset>
+              <legend>
+                <div class="choose_filter">
+                  <label for="">питание:
+                    <input type="radio" name="charge">
+                    <label>аккумуляторные</label>
+                    <input type="radio" name="charge">
+                    <label>сетевые</label>
+                  </label>
+                </div>
+              </legend>
+            </fieldset>
+            <button type="submit">Показать</button>
+          </form>
+          <ul>
+            <li><img src="" alt="">
+              <h3>Перфоратор BOSCH BFG 3000</h3>
+              <p>22500 Р.</p><a href="">15500 Р.</a>
+            </li>
+            <li><img src="" alt="">
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <p>30500 Р.</p><a href="">25500 Р.</a>
+            </li>
+            <li><img src="" alt="">
+              <h3>Перфоратор BOSCH BFG 2000</h3><a href=""></a>
+            </li>
+            <li><img src="" alt="">
+              <h3>Перфоратор BOSCH BFG 3000</h3>
+              <p>22500 Р.</p><a href="">15500 Р.</a>
+            </li>
+            <li><img src="" alt="">
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <p>30500 Р.</p><a href="">25500 Р.</a>
+            </li>
+            <li><img src="" alt="">
+              <h3>Перфоратор BOSCH BFG 2000</h3><a href=""></a>
+            </li>
+            <li><img src="" alt="">
+              <h3>Перфоратор BOSCH BFG 3000</h3>
+              <p>22500 Р.</p><a href="">15500 Р.</a>
+            </li>
+            <li><img src="" alt="">
+              <h3>Перфоратор BOSCH BFG 6000</h3>
+              <p>30500 Р.</p><a href="">25500 Р.</a>
+            </li>
+            <li><img src="" alt="">
+              <h3>Перфоратор BOSCH BFG 2000</h3><a href="">12500 Р.</a>
+            </li>
+          </ul>
+        </section>
+        <section></section>
+      </main>
+      <footer class="footer">
+        <div class="footer_top">
+          <div class="footer_logo">Техномарт</div>
+          <ul>
             <li><a href="">Компания</a></li>
-            <li><a class="current">Каталог</a></li>
             <li><a href="">Новости</a></li>
-            <li><a href="">Спецпредложения</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
             <li><a href="">Доставка</a></li>
             <li><a href="">Контакты</a></li>
           </ul>
-        </nav>
-      </section>
-    </header>
-    <main>
-      <ul>
-        <li><img src="" alt="home"></li>
-        <li><a href="#">Каталог </a></li>
-        <li><a href="">Инструмент</a></li>
-        <li><a>Перфораторы</a></li>
-      </ul>
-      <h2>Перфораторы</h2>
-      <section>
-        <form action="" method="method">
-          <fieldset>
-            <legend></legend>
-          </fieldset>
-          <p>Производители:</p>
-          <ul>
-            <li>bosch</li>
-            <li>интерскол</li>
-            <li>makita</li>
-            <li>dewalt</li>
-            <li>hitachi</li>
+        </div>
+        <div class="footer_middle">
+          <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><a href="tel:">+7 (812) 555-05-55 </a>
+          <ul> 
+            <li><a href="">Материалы</a></li>
+            <li><a href="">Техника</a></li>
+            <li><a href="">Инструмент</a></li>
+            <li><a href="">Спецпредложения</a></li>
           </ul>
-          <p>питание:</p>
-          <ul>
-            <li>аккумуляторные</li>
-            <li>сетевые</li>
-          </ul>
-          <button type="submit">Показать</button>
-        </form>
-        <ul>
-          <li><img src="" alt="">
-            <h3>Перфоратор BOSCH BFG 3000</h3>
-            <p>22500 Р.</p><a href="">15500 Р.</a>
-          </li>
-          <li><img src="" alt="">
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <p>30500 Р.</p><a href="">25500 Р.</a>
-          </li>
-          <li><img src="" alt="">
-            <h3>Перфоратор BOSCH BFG 2000</h3><a href=""></a>
-          </li>
-          <li><img src="" alt="">
-            <h3>Перфоратор BOSCH BFG 3000</h3>
-            <p>22500 Р.</p><a href="">15500 Р.</a>
-          </li>
-          <li><img src="" alt="">
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <p>30500 Р.</p><a href="">25500 Р.</a>
-          </li>
-          <li><img src="" alt="">
-            <h3>Перфоратор BOSCH BFG 2000</h3><a href=""></a>
-          </li>
-          <li><img src="" alt="">
-            <h3>Перфоратор BOSCH BFG 3000</h3>
-            <p>22500 Р.</p><a href="">15500 Р.</a>
-          </li>
-          <li><img src="" alt="">
-            <h3>Перфоратор BOSCH BFG 6000</h3>
-            <p>30500 Р.</p><a href="">25500 Р.</a>
-          </li>
-          <li><img src="" alt="">
-            <h3>Перфоратор BOSCH BFG 2000</h3><a href="">12500 Р.</a>
-          </li>
-        </ul>
-      </section>
-      <section></section>
-    </main>
-    <footer>
-      <div class="footer_top">
-        <div class="footer_logo">Техномарт</div>
-        <ul>
-          <li><a href="">Компания</a></li>
-          <li><a href="">Новости</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="">Доставка</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-      </div>
-      <div class="footer_middle">
-        <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><a href="tel:">+7 (812) 555-05-55 </a>
-        <ul> 
-          <li><a href="">Материалы</a></li>
-          <li><a href="">Техника</a></li>
-          <li><a href="">Инструмент</a></li>
-          <li><a href="">Спецпредложения</a></li>
-        </ul>
-      </div>
-      <div class="footer_bottom">
-        <p>© 2010-2017 Компания "Техномарт" Все права защищены</p><img src="" alt="alt">
-        <p>Обратная связь</p><a href="mailto:">mail@htmlacademy.ru</a>
-        <p>Разработано htmlacademy.ru</p>
-      </div>
-    </footer>
+        </div>
+        <div class="footer_bottom">
+          <p>© 2010-2017 Компания "Техномарт" Все права защищены</p><img src="" alt="alt">
+          <p>Обратная связь</p><a href="mailto:">mail@htmlacademy.ru</a>
+          <p>Разработано htmlacademy.ru</p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
