--- a/index.html
+++ b/index.html
@@ -2,78 +2,82 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Техномарт</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>HTML Academy: Техномарт Главная</title>
   </head>
   <body>
-    <header>
-      <div class="logo">техномарт
+    <div class="wrapper">
+      <header class="header">
+        <div class="logo">техномарт</div>
         <div class="search">Поиск:</div>
         <div class="bookmarks">Закладки: 0</div>
         <div class="mart">Корзина: 0</div>
         <div class="order">Оформить заказ</div>
-      </div>
-      <section>
-        <h2>главные данные</h2>
-        <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
-        <p><a href="tel:">+7 (812) 555-05-55</a></p>
-        <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <button type="submit">Войти</button>
-        <button type="submit">Регистриция</button>
-        <nav>
+        <section>
+          <h2>главные данные</h2>
+          <p>Интернет-магазин</p>
+          <p>строительных материалов</p>
+          <p>и инструментов для ремонта</p><a href="tel:">+7 (812) 555-05-55</a>
+          <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><a href="login.html">Войти</a><a href="registration.html">Регистриция</a>
+          <nav>
+            <ul>
+              <li><a class="current">Главная</a></li>
+              <li><a href="">Компания</a></li>
+              <li><a href="catalog.html">Каталог</a></li>
+              <li><a href="">Новости</a></li>
+              <li><a href="">Спецпредложения</a></li>
+              <li><a href="">Доставка</a></li>
+              <li><a href="">Контакты</a></li>
+            </ul>
+          </nav>
+        </section>
+      </header>
+      <main>
+        <section>
+          <h2>Компания "Техномарт"</h2>
+          <p>Настоящий мужской шопинг начинается здесь! огромный выбор товаров для ремонта и</p>
+          <p>строительства не оставит равнодушным любителей сэкономить на гастарбайтерах. </p>
+          <p>Мы можемдоставить ваш товар в самые отдельные точки России!</p>
+          <p>Техномарт работает со многими ранспортными компаниями:</p>
           <ul>
-            <li><a class="current">Главная</a></li>
+            <li>Деловые линии</li>
+            <li>Автотрейдинг</li>
+            <li>ЖелДорЭкспедиция</li>
+          </ul><a href="about.html">Подробнее о компании </a>
+        </section>
+        <section>
+          <h2>Контакты</h2>
+          <p>можете выбрать товар сами, заехав в наш офис:</p>
+          <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158" frameborder="0"></iframe>
+          <button type="submit">Заблудились? Напишите нам!</button>
+        </section>
+      </main>
+      <footer>
+        <div class="footer_top">
+          <div class="footer_logo">Техномарт</div>
+          <ul>
             <li><a href="">Компания</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
             <li><a href="">Новости</a></li>
-            <li><a href="">Спецпредложения</a></li>
+            <li><a href="catalog.html">Каталог</a></li>
             <li><a href="">Доставка</a></li>
             <li><a href="">Контакты</a></li>
           </ul>
-        </nav>
-      </section>
-    </header>
-    <main>
-      <section>
-        <h2>Компания "Техномарт"</h2>
-        <p>Настоящий мужской шопинг начинается здесь! огромный выбор товаров для ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах</p><br/>Мы можемдоставить ваш товар в самые отдельные точки России!<br/>Техномарт работает со многими ранспортными компаниями:
-        <ul>
-          <li>Деловые линии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
-        </ul><a href="about.html">Подробнее о компании </a>
-      </section>
-      <section>
-        <h2>Контакты</h2>
-        <p>можете выбрать товар сами, заехав в наш офис:</p>
-        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158" frameborder="0"></iframe>
-        <button type="submit">Заблудились? Напишите нам!</button>
-      </section>
-    </main>
-    <footer>
-      <div class="footer_top">
-        <div class="footer_logo">Техномарт</div>
-        <ul>
-          <li><a href="">Компания</a></li>
-          <li><a href="">Новости</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="">Доставка</a></li>
-          <li><a href="">Контакты</a></li>
-        </ul>
-      </div>
-      <div class="footer_middle">
-        <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><a href="tel:">+7 (812) 555-05-55 </a>
-        <ul> 
-          <li><a href="">Материалы</a></li>
-          <li><a href="">Техника</a></li>
-          <li><a href="">Инструмент</a></li>
-          <li><a href="">Спецпредложения</a></li>
-        </ul>
-      </div>
-      <div class="footer_bottom">
-        <p>© 2010-2017 Компания "Техномарт" Все права защищены</p><img src="" alt="alt">
-        <p>Обратная связь</p><a href="mailto:">mail@htmlacademy.ru</a>
-        <p>Разработано htmlacademy.ru</p>
-      </div>
-    </footer>
+        </div>
+        <div class="footer_middle">
+          <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p><a href="tel:">+7 (812) 555-05-55 </a>
+          <ul> 
+            <li><a href="">Материалы</a></li>
+            <li><a href="">Техника</a></li>
+            <li><a href="">Инструмент</a></li>
+            <li><a href="">Спецпредложения</a></li>
+          </ul>
+        </div>
+        <div class="footer_bottom">
+          <p>© 2010-2017 Компания "Техномарт" Все права защищены</p><img src="" alt="alt">
+          <p>Обратная связь</p><a href="mailto:">mail@htmlacademy.ru</a>
+          <p>Разработано htmlacademy.ru</p>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
