fixed catalog file

--- a/catalog.html
+++ b/catalog.html
@@ -145,6 +145,18 @@
             <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
             <p class="price">12500 Р.</p>
           </div>
+          <div class="goods-item-navigation">
+            <ul>
+              <li><a href="">1</a></li>
+              <li><a href="">2</a></li>
+              <li><a href="">3</a></li>
+              <li><a href="">Слудующая</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="page-content-end">
+          <h3>пара слов о перфораторах</h3>
+          <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне. Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
         </div>
       </div>
     </main>
