fixed additional markup_2

--- a/catalog.html
+++ b/catalog.html
@@ -108,6 +108,13 @@
           </form>
         </aside>
         <section class="goods catalog">
+          <div class="sort">
+            <div class="sort-to">сортировка:</div>
+            <div class="sort-to-type">по цене</div>
+            <div class="sort-to-functional">по функионалу</div>
+            <div class="sort-to-up"></div>
+            <div class="sort-to-down"></div>
+          </div>
           <div class="goods-item"><a href=""><img src="" alt=""></a>
             <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
             <s class="old-price">22500 Р.</s>
@@ -187,7 +194,10 @@
           </ul>
         </div>
         <div class="bottom-row">
-          <p>© 2010-2017 Компания "Техномарт" Все права защищены</p><img src="" alt="alt">
+          <p>© 2010-2017 Компания "Техномарт" Все права защищены</p>
+          <div class="social-vk"></div>
+          <div class="social-facebook"></div>
+          <div class="social-instagram"></div>
           <p>Обратная связь</p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a><a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">Разработано htmlacademy.ru</a>
         </div>
       </div>
