--- a/index.html
+++ b/index.html
@@ -184,7 +184,10 @@
           </ul>
         </div>
         <div class="bottom-row">
-          <p>© 2010-2017 Компания "Техномарт" Все права защищены</p><img src="" alt="alt">
+          <p>© 2010-2017 Компания "Техномарт" Все права защищены</p>
+          <div class="social-vk"></div>
+          <div class="social-facebook"></div>
+          <div class="social-instagram"></div>
           <p>Обратная связь</p><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a><a href="https://htmlacademy.ru/intensive/htmlcss" target="_blank">Разработано htmlacademy.ru</a>
         </div>
       </div>
