added all image files to img folder, give address at html file

--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
     <header class="page-header">
       <div class="container">
         <div class="top-row">
-          <div class="logo-top"><img src="" alt="alt"></div>
+          <div class="logo-top"><img src="img/logo-technomart.svg" alt="logo"></div>
           <div class="search">
             <form action="search.html" method="get">
+              <input type="image" src="img/icon-search.svg" alt="search">
               <input type="text" placeholder="Поиск:">
               <button type="submit"></button>
             </form>
@@ -86,22 +87,22 @@
           <h3>Популярные товары:</h3><a href="">все популярные товары</a>
         </header>
         <div class="goods">
-          <div class="goods-item"><a href=""><img src="" alt=""></a>
+          <div class="goods-item"><a href=""><img src="img/Perforator_9000.jpg" alt="Perforator_9000"></a>
             <h3 class="title">Перфоратор BOSCH BFG 9000</h3>
             <s class="old-price">32500 Р.</s>
             <p class="price">25500 Р.</p>
           </div>
-          <div class="goods-item"><a href=""><img src="" alt=""></a>
+          <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
             <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
             <s class="old-price">22500 Р.</s>
             <p class="price">15500 Р.</p>
           </div>
-          <div class="goods-item"><a href=""><img src="" alt=""></a>
+          <div class="goods-item"><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
             <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
             <s class="old-price">30500 Р.</s>
             <p class="price">25500 Р.</p>
           </div>
-          <div class="goods-item"><a href=""><img src="" alt=""></a>
+          <div class="goods-item"><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
             <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
             <p class="price">12500 Р.</p>
           </div>
@@ -112,14 +113,14 @@
           <h3>Популярные Производители:</h3><a href="">все производители</a>
         </header>
         <ul class="manufacturers">
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
-          <li class="manufacturers-item"><a href="" target="_blank"><img src="" alt=""></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/bosch.jpg" alt="bosch"></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Makita.jpg" alt="Makita"></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/DeWALT.jpg" alt="DeWALT"></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Интерскол.jpg" alt="Интерскол"></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Hitachi.jpg" alt="Hitachi"></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/LG.jpg" alt="LG"></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/AEG.jpg" alt="AEG"></a></li>
+          <li class="manufacturers-item"><a href="" target="_blank"><img src="img/Metabo.jpg" alt="Metabo"></a></li>
         </ul>
       </section>
       <div class="company-info-wrapper">
@@ -164,13 +165,22 @@
             <p>можете выбрать товар сами, заехав в наш офис:</p>
             <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158" frameborder="0"></iframe><a href="">Заблудились? Напишите нам!</a>
           </div>
+          <div class="send-form">
+            <form action="https://echo.htmlacademy.ru/courses" method="post">
+              <label for="introduce">Ваше имя:</label>
+              <input type="text" name="introduce" placeholder="Представьтесь, пожалуйста">
+              <div class="button">
+                <button type="submit">отправить</button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </main>
     <footer class="page-footer">
       <div class="container">
         <div class="top-row">
-          <div class="logo-bottom"><img src="" alt="alt"></div>
+          <div class="logo-bottom"><img src="img/logo-technomart.svg" alt="logo"></div>
           <ul class="footer-nav">
             <li><a href="">Компания</a></li>
             <li><a href="">Новости</a></li>
