--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
     <header class="page-header">
       <div class="container">
         <div class="top-row">
-          <div class="logo-top"><img src="" alt="alt"></div>
+          <div class="logo-top"><img src="img/logo-technomart.svg" alt="logo"></div>
           <div class="search">
             <form action="search.html" method="get">
               <input type="text" placeholder="Поиск:">
@@ -51,8 +51,8 @@
     <main class="page-content">
       <div class="container">
         <ul class="breadcrumbs">
-          <li class="breadcrumbs-item home"><a href="index.html"> <img src="" alt="home"></a></li>
-          <li class="breadcrumbs-item"><a href="">Каталог </a></li>
+          <li class="breadcrumbs-item home"><a href="index.html"> <img src="img/icon-home.svg" alt="home"></a></li>
+          <li class="breadcrumbs-item"><a href="">Каталог</a></li>
           <li class="breadcrumbs-item"><a href="">Инструмент</a></li>
           <li class="breadcrumbs-item"><a class="current">Перфораторы</a></li>
         </ul>
@@ -120,45 +120,45 @@
               <li class="sort-to-down"><a href=""></a></li>
             </ul>
           </div>
-          <div class="goods-item"><a href=""><img src="" alt=""></a>
+          <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
             <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
             <s class="old-price">22500 Р.</s>
             <p class="price">15500 Р.</p>
           </div>
-          <div class="goods-item"><a href=""><img src="" alt=""></a>
+          <div class="goods-item"><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
             <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
             <s class="old-price">30500 Р.</s>
             <p class="price">25500 Р.</p>
           </div>
-          <div class="goods-item"><a href=""><img src="" alt=""></a>
+          <div class="goods-item"><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
             <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
             <p class="price">12500 Р.</p>
           </div>
-          <div class="goods-item"><a href=""><img src="" alt=""></a>
+          <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
             <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
             <s class="old-price">22500 Р.</s>
             <p class="price">15500 Р.</p>
           </div>
-          <div class="goods-item"><a href=""><img src="" alt=""></a>
+          <div class="goods-item"><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
             <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
             <s class="old-price">30500 Р.</s>
             <p class="price">25500 Р.</p>
           </div>
-          <div class="goods-item"><a href=""><img src="" alt=""></a>
+          <div class="goods-item"><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
             <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
             <p class="price">12500 Р.</p>
           </div>
-          <div class="goods-item"><a href=""><img src="" alt=""></a>
+          <div class="goods-item"><a href=""><img src="img/Perforator_3000.jpg" alt="Perforator_3000"></a>
             <h3 class="title">Перфоратор BOSCH BFG 3000</h3>
             <s class="old-price">22500 Р.</s>
             <p class="price">15500 Р.</p>
           </div>
-          <div class="goods-item"><a href=""><img src="" alt=""></a>
+          <div class="goods-item"><a href=""><img src="img/Perforator_6000.jpg" alt="Perforator_6000"></a>
             <h3 class="title">Перфоратор BOSCH BFG 6000</h3>
             <s class="old-price">30500 Р.</s>
             <p class="price">25500 Р.</p>
           </div>
-          <div class="goods-item"><a href=""><img src="" alt=""></a>
+          <div class="goods-item"><a href=""><img src="img/Perforator_2000.jpg" alt="Perforator_2000"></a>
             <h3 class="title">Перфоратор BOSCH BFG 2000</h3>
             <p class="price">12500 Р.</p>
           </div>
@@ -180,7 +180,7 @@
     <footer class="page-footer">
       <div class="container">
         <div class="top-row">
-          <div class="logo-bottom"><img src="" alt="alt"></div>
+          <div class="logo-bottom"><img src="img/logo-technomart.svg" alt="logo"></div>
           <ul class="footer-nav">
             <li><a href="">Компания</a></li>
             <li><a href="">Новости</a></li>
