--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
                 <label for="e-mail">Ваш e-mail:</label>
                 <input type="text" name="e-mail" placeholder="email@example.com">
               </p>
-              <p class="send-text full-width">
-                <label for="send-text">Текст письма:</label>
-                <input type="text" name="send-text" placeholder="В свободной форме">
+              <p class="text full-width">
+                <label for="text">Текст письма:</label>
+                <textarea name="text" placeholder="В свободной форме" rows="6"></textarea>
               </p>
               <div class="button">
                 <button class="btn" type="submit">отправить</button>
