checked all elements

--- a/catalog.html
+++ b/catalog.html
@@ -37,7 +37,7 @@
         </div>
         <div class="middle-row">
           <div class="slogan">
-            <h2>главные данные</h2>
+            <h2 class="visually-hidden">главные данные</h2>
             <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
           </div>
           <div class="address"><a href="tel:+78125550555">+7 (812) 555-05-55</a>
@@ -121,7 +121,7 @@
                 <input type="radio" name="charge" value="accum" id="accum" checked>
                 <label for="accum">аккумуляторные</label>
               </p>
-              <p> 
+              <p>
                 <input type="radio" name="charge" value="network" id="network">
                 <label for="network">сетевые</label>
               </p>
@@ -137,7 +137,7 @@
               <li class="sort-to-type"><a href="">по типу</a></li>
               <li class="sort-to-functional"><a href="">по функионалу</a></li>
             </ul>
-            <ul class="arrows"> 
+            <ul class="arrows">
               <li class="arrow-item-up"><a href="">up</a></li>
               <li class="arrow-item-down"><a href="">down</a></li>
             </ul>
