--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="middle-row">
           <div class="slogan">
-            <h2>главные данные</h2>
+            <h2 class="visually-hidden">главные данные</h2>
             <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
           </div>
           <div class="address"><a href="tel:+78125550555">+7 (812) 555-05-55</a>
@@ -154,8 +154,8 @@
           <div class="wrapper">
             <ul class="service-tab-nav">
               <li class="service-tab-item" data-name="1"><a href="">Доставка</a></li>
-              <li class="service-tab-item" data-name="2"> <a href="">Гарантия</a></li>
-              <li class="service-tab-item" data-name="3"> <a href="">Кредит</a></li>
+              <li class="service-tab-item" data-name="2"><a href="">Гарантия</a></li>
+              <li class="service-tab-item" data-name="3"><a href="">Кредит</a></li>
             </ul>
             <div class="service-tab-content">
               <div class="service-tab-item deliverity">
@@ -176,20 +176,20 @@
         <div class="about">
           <div class="company">
             <h2>Компания "Техномарт"</h2>
-            <p class="text">Настоящий мужской шопинг начинается здесь! огромный выбор товаровдля ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах. </p>
+            <p class="text">Настоящий мужской шопинг начинается здесь! огромный выбор товаровдля ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах.</p>
             <p class="text">Мы можемдоставить ваш товар в самые отдельные точки России! Техномарт работает со многими ранспортными компаниями:</p>
             <ul class="partners">
               <li class="partner">Деловые линии</li>
               <li class="partner">Автотрейдинг</li>
               <li class="partner">ЖелДорЭкспедиция</li>
-            </ul><a class="btn" href="about.html">Подробнее о компании </a>
+            </ul><a class="btn" href="about.html">Подробнее о компании</a>
           </div>
           <div class="contacts">
             <h2>Контакты</h2>
             <p>можете выбрать товар сами, заехав в наш офис:</p>
             <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Af7942402afd77c97127f6b87a4f2f23d35437ba63bd0ca024083946f659745f8&amp;amp;source=constructor" width="300" height="158" frameborder="0"></iframe><a class="btn" href="">Заблудились? Напишите нам!</a>
           </div>
-          <div class="send-form">
+          <div class="send-form visually-hidden">
             <form action="https://echo.htmlacademy.ru/courses" method="post">
               <p class="name-half-width">
                 <label for="introduce">Ваше имя:</label>
