--- a/index.html
+++ b/index.html
@@ -38,15 +38,18 @@
             <h2 class="visually-hidden">главные данные</h2>
             <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
           </div>
-          <div class="address"><a href="tel:+78125550555">+7 (812) 555-05-55</a>
+          <div class="address">
+            <div class="phone-number">
+              <div class="phone"></div><a class="number" href="tel:+78125550555">+7 (812) 555-05-55</a>
+            </div>
             <p>г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
-          <div class="authorization"><a href="login.html" aria-label="login">
+          <div class="authorization"><a class="enter" href="login.html" aria-label="login">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17">
                 <path fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z"></path>
                 <path fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z"></path>
               </svg>
-              <p class="customer">Войти</p></a><a href="registration.html">Регистриция</a></div>
+              <p class="customer">Войти</p></a><a class="registration" href="registration.html">Регистриция</a></div>
         </div>
         <nav class="navigation">
           <ul class="navigation-list">
