more, more css + img files

--- a/index.html
+++ b/index.html
@@ -68,21 +68,25 @@
       <section class="categories">
         <div class="left-column">
           <div class="categories-item material">
-            <h3>материалы</h3><a class="click" href="">на любой вкус</a>
+            <h3>материалы</h3>
+            <div class="click"><a href="">на любой вкус</a></div>
             <div class="item-icon-material"></div>
           </div>
           <div class="categories-item tool">
-            <h3>инструмент</h3><a class="click" href="">на все случаи</a>
+            <h3>инструмент</h3>
+            <div class="click"><a href="">на все случаи</a></div>
             <div class="item-icon-tool"></div>
           </div>
           <div class="categories-item slider">
-            <div class="slider-item">
+            <div class="slider-item perf">
               <h3>Перфораторы</h3>
-              <p>Настоящие мужские игрушки</p><a class="btn" href="catalog.html">Открыть каталог</a>
+              <p>Настоящие мужские игрушки</p>
+              <div class="btn"><a href="catalog.html">Открыть каталог</a></div>
             </div>
-            <div class="slider-item">
+            <div class="slider-item drill">
               <h3>Дрели</h3>
-              <p>Соседям на радость!</p><a class="btn" href="catalog.html">Открыть каталог</a>
+              <p>Соседям на радость!</p>
+              <div class="btn"><a href="catalog.html">Открыть каталог</a></div>
             </div>
             <div class="controls">
               <button class="dot active" type="button"></button>
@@ -94,22 +98,26 @@
         </div>
         <div class="right-column">
           <div class="categories-item technic">
-            <h3>техника</h3><a class="click" href="">для стройки</a>
+            <h3>техника</h3>
+            <div class="click"><a href="">для стройки</a></div>
             <div class="item-icon-technic"></div>
           </div>
           <div class="categories-item sale">
-            <h3>скидка 50%</h3><a class="click" href="">на 350 товаров</a>
+            <h3>скидка 50%</h3>
+            <div class="click"><a href="">на 350 товаров</a></div>
             <div class="item-icon-sale"></div>
           </div>
           <div class="categories-item delivery">
-            <h3>доставка</h3><a class="click" href="">бесплатно</a>
+            <h3>доставка</h3>
+            <div class="click"><a href="">бесплатно</a></div>
             <div class="item-icon-delivery"></div>
           </div>
         </div>
       </section>
       <section class="popular products">
         <header class="popular-header">
-          <h3>Популярные товары:</h3><a class="btn" href="">все популярные товары</a>
+          <h3>Популярные товары:</h3>
+          <div class="btn"><a href="">все популярные товары</a></div>
         </header>
         <div class="goods">
           <div class="goods-item"><a href=""><img src="img/Perforator_9000.jpg" alt="Perforator_9000"></a>
@@ -147,7 +155,8 @@
       </section>
       <section class="popular manufacturer">
         <header class="popular-header">
-          <h3>Популярные Производители:</h3><a class="btn" href="">все производители</a>
+          <h3>Популярные Производители:</h3>
+          <div class="btn"><a href="">все производители</a></div>
         </header>
         <ul class="manufacturers">
           <li class="manufacturers-item"><a href="" target="_blank"><img src="img/bosch.png" alt="bosch"></a></li>
